# losem

./: .gitignore  README.md  justfile  main.py  pyproject.toml
losem/: ingestion.py  models.py  search.py  sql_statements.py
losem/tests/: test_ingestion.py  test_searching.py
