[project]
name = "losem"
version = "0.1.0"
description = "A small vector store powered CLI tool for local semantic searches, RAG etc."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bandit>=1.8.6",
    "duckdb>=1.3.2",
    "ipython>=9.4.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-ollama>=0.3.6",
    "langchain-unstructured>=0.1.6",
    "more-itertools>=10.7.0",
    "pyclean>=3.1.0",
    "pyrefly>=0.26.1",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "unstructured>=0.18.11",
]

[tool.bandit]
exclude_dirs = ["losem/tests"]
# 'B101' --> do not notify about 'assert' statements
skips = ['B101']
