[project]
# General information
name = "losem"
version = "0.1.0"
description = "A small vector store (DuckDB) powered CLI tool for local semantic searches, RAG etc."
authors = [
    {name = "markus", email = "markus@restless-bytes.com"}
]
readme = "README.md"
requires-python = ">=3.12"
keywords = [
    "semantic search",
    "cli",
    "rag",
    "keyword",
    "semantic"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Topic :: Utilities",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
]
[project.urls]
Repository = "https://github.com/restlessbytes/losem"

# Dependencies - core
dependencies = [
    "duckdb>=1.3.2",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-ollama>=0.3.6",
    "langchain-unstructured>=0.1.6",
    "more-itertools>=10.7.0",
    "unstructured>=0.18.11",
]
# Dependencies - dev
[project.optional-dependencies]
dev = [
    "bandit>=1.8.6",
    "ipython>=9.4.0",
    "pyclean>=3.1.0",
    "pyrefly>=0.26.1",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
]

# Pytest config
[tool.pytest.ini_options]
testpaths = [
    "losem/tests"
]

# Bandit config
[tool.bandit]
exclude_dirs = ["losem/tests"]
# 'B101' --> do not notify about 'assert' statements
skips = ['B101']
